Increases font size to prevent zoom on mobile

--- a/src/App/Form/index.css
+++ b/src/App/Form/index.css
@@ -30,6 +30,8 @@ input[type=number] {
   font-family: "Cal Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 20px;
+  text-align: center;
   /* Removes arrow controls */
   -moz-appearance: textfield;
 }
