--- a/src/App/index.css
+++ b/src/App/index.css
@@ -14,6 +14,7 @@
   font-family: "Cal Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 20px;
   width: 100vw;
 }
 
@@ -35,7 +36,7 @@
 
   #root {
     width: 480px;
-    height: 720px;
+    height: 750px;
   }
 }
 
